--- a/brokenHashAlgorithm.cbp
+++ b/brokenHashAlgorithm.cbp
@@ -11,8 +11,10 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option projectCompilerOptionsRelation="0" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="-std=c++11" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -33,6 +35,12 @@
 			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="main.cpp" />
+		<Unit filename="md5.cpp" />
+		<Unit filename="md5.h" />
+		<Unit filename="sha1.cpp" />
+		<Unit filename="sha1.h" />
+		<Unit filename="sha256.cpp" />
+		<Unit filename="sha256.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
